# avx512-test-suite

./: CMakeLists.txt  README.md  copy.sh  run_test.sh
AVX512BW/: compile.sh
AVX512BWVL/: compile.sh  run.sh
AVX512DQ/: compile.sh
AVX512DQVL/: compile.sh
AVX512F/: CMakeLists.txt  compile.sh
AVX512VL/: compile.sh
ELFS/: AVX512F-abs  AVX512F-broadcast  AVX512F-casts  AVX512F-expand_compress  AVX512F-fma_addsub  AVX512F-getmant  AVX512F-i32gather_64_m512  AVX512F-i32scatter_32  AVX512F-i32scatter_64  AVX512F-inline_asm  AVX512F-insert  AVX512F-load_store_xyz  AVX512F-mask_mov  AVX512F-minmax_int64  AVX512F-mov_xyz_int  AVX512F-reduce_add_mul_m512  AVX512F-roundscale_scalar  AVX512F-swizzle  AVX512F-t_movzext  AVX512F-vpmovdown_xmm
ELFs/: AVX512F-alignr  AVX512F-extract  AVX512F-i32gather_32  AVX512F-i32gather_64  AVX512F-i32scatter_64_m512  AVX512F-i64gather_32  AVX512F-i64gather_32_m512  AVX512F-i64scatter_32  AVX512F-i64scatter_64  AVX512F-imul  AVX512F-m512_op_pd  AVX512F-m512_op_ps  AVX512F-mask_set_bw  AVX512F-mask_set_dq  AVX512F-maskz  AVX512F-math  AVX512F-minmax_shift  AVX512F-mm_cvt_rounds  AVX512F-mm_op_sd  AVX512F-permutes  AVX512F-psadbw  AVX512F-rcp_rsqrt_14_m512  AVX512F-reduce  AVX512F-scalef  AVX512F-sets  AVX512F-shift  AVX512F-shiftrot  AVX512F-shuffles  AVX512F-sqrt_scalar  AVX512F-store  AVX512F-undefined_m512  AVX512F-unpack_shuffle  AVX512F-vpmovdown  AVX512F-xor  AVX512F-xor_or_m512_epi32
